Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore trunk:

pkgcore 0.8.5: October 18th, 2012

* pkgcore now matches the new PMS rules on package naming (specifically
  that the last component can't be a version at all, period).  Also
  tightened up some stupidly horrible allowed names- stuff like diff-mode-
  for a package name (gentoo bug #438370).

* pkgcore no longer supports the old form cvs version component; for
  example, diffball-cvs.1.0 (cvs version of 1.0 for diffball).  This has
  long since been deprecated- basically since day 1 of cvs.  It's been
  basically six years, no vdb usage should exist anymore, thus dropping
  support for it.

* Fixed test sporadic test failure- false positive code quality check.
  Gentoo bug 437216.

* Fixed doc generation for py3k.


pkgcore 0.8.4: October 4th, 2012

* Fix bad function reference in eapi3 guts.


pkgcore 0.8.3: October 4th, 2012

* Fixed bug where default phases weren't guranteed to be ran.


pkgcore 0.8.2: October 1st, 2012

* Fixed pmaint exception for when eclass preloading was enabled.


pkgcore 0.8.1: September 29th, 2012

* Pkgcore now requires snakeoil 0.5.1.

* The cache format 'md5-cache' is now supported (this is what gentoo-x86
  switched to, and what chromeos uses).

* core environment saving functionality was sped up by ~10x.  Basically
  every package will see a gain; simple ones like bsdiff, on my hardware
  went from ~5.2s to 1.5s; diffball from ~12.4 to ~9.2; hell, even
  git (with binpkgs turned off) dropped from 28.5s to 21.1s.
  This improves both --attr environment, and general functionality;
  regen however shouldn't be any faster (already avoided these pathways).

* filter-env gained a --print-funcs option.  Additionally, the underlying
  core has been enhanced so that analysis within a function block is
  possible.

* pquery --attr environment now can work for raw ebuilds, rather than
  just built ebuilds.
